# shiryu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dagger.json  pyproject.toml  ruff.toml
.github/actions/check/: action.yml
.github/actions/lint/: action.yml
.github/actions/test_install/: action.yml
.github/workflows/: dagger.yml  test.yml
dagger/: .gitignore  pyproject.toml
src/shiryu/: __init__.py  dagger_utils.py  main.py  shiryu.py  template.py
src/shiryu/sdk/: __init__.py  main.py
src/shiryu/sdk/common/: __init__.py
src/shiryu/sdk/common/templates/: .gitignore.template  __init__.py  dagger.yml.template
src/shiryu/sdk/python/: __init__.py  base.py  build.py  check.py  lint.py  test_install.py
src/shiryu/sdk/python/templates/: __init__.py  mypy.ini.template
src/shiryu/templates/: dagger.yml.template  mypy.ini.template  pyproject.toml.template  ruff.toml.template
src/shiryu/utils/: dagger.py  template.py
